# dawn_chorus_benchmark

./: .env.sample  .gitignore  .skyignore  README.md  evaluate_wer.py  extract_mix_audio.py  generate_transcripts.py  generate_transcripts_kyutai.py  plot_aesthetic (1).py  pyproject.toml
.github/workflows/: hush-unit-test.yml
aic/: enhance_dawn_chorus_with_aic.py  pyproject.toml
hush/: enhance_dawn_chorus_with_hush.py  enhance_dawn_chorus_with_hush_onnx.py  pyproject.toml
hush/tests/: conftest.py  test_enhancement.py
kyutai/: kyutai_api.py
sky/: run.yaml
sky/configs/: config-stt-en-hf.toml
